# NeuralNetwork_Cpp

./: CMakeLists.txt  README.md  main.cpp  neural_network.cpp  neural_network.h  script.gp  utils.cpp  utils.h
